--- a/about.qmd
+++ b/about.qmd
@@ -44,10 +44,10 @@ Formula 1 combines engineering excellence, driver skill, and strategic decisions
 
 ### Team Members :
 
--   Yogeshwar Sapkal
+-   Yogeshwar Sapkal - Master's in Information Science
 
--   Sanjeev Ponugumati
+-   Sanjeev Ponugumati - Master's in Information Science
 
--   Sindhu Goshika
+-   Sindhu Goshika - Master's in Information Science
 
--   Sahana Santhosh
+-   Sahana Santhosh - Master's in Information Science
